// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-temporary-file should delete a temporary file 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-temporary-file should handle non-existent temporary file 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The temporary file could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
